{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player1",
            "id": "3d868e3a-0eb8-4ff6-94a6-9b801149cc7d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "5eeb593d-038f-4986-b002-fddd8f75e0e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "1592916e-bc3f-456e-9564-d8555ab4d197",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "749c0be2-fd0a-4681-a3fc-dedfcfbb3fb3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "149e73bd-bdaa-4af8-954b-c3e4becd95bf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player2",
            "id": "f664c9f7-17f6-4700-8a80-6a81ffa8ee40",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "6a23a637-1ffa-4da7-9c0a-e147286a430f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "f36f6793-e827-4918-aa12-7c3758810aa0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e2eff8dd-53f9-4bb4-bf08-a6c2776e1a16",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a28d9554-b7d1-412f-9952-b6c3a173a5dd",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player3",
            "id": "4e60ca6e-5abd-4afc-8b5f-cb065ed51894",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "7fef8faf-4693-4f80-8b57-0255c6ffe7a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "4dcfa190-fc89-4ed5-98f2-df2c8d161a2a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8658cc42-f623-4f9e-94db-40eae9cae038",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "df4c81c0-a758-4fb6-a8d8-a45badfbca4d",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player4",
            "id": "040f5b4f-1ec6-459d-87f4-e77562f9717e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "23fcfdf3-406c-4b19-aaef-aecf0463f7b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "f24fee3d-fc89-409f-8bd7-c1837a665906",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e1acaa52-0415-42d3-aba0-6d7ce4e05af4",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d04907aa-3287-4661-b3b2-72fa16d8fe20",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}